[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemies/virus orange.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://hit_and_damage/hurt_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/virus_1.gd" type="Script" id=4]
[ext_resource path="res://enemy_stat.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "terbang",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 3.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.47071
height = 6.25216

[node name="virus_1" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 4 )

[node name="virus" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "terbang"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="hurt_box" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -9 )
scale = Vector2( 1.92478, -1.35741 )
collision_layer = 8

[node name="CollisionShape2D" parent="hurt_box" index="0"]
position = Vector2( 0, 2.2101 )
scale = Vector2( -0.75974, -0.771251 )
shape = SubResource( 8 )

[node name="enemy_stat" parent="." instance=ExtResource( 5 )]

[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="death" from="enemy_stat" to="." method="_on_enemy_stat_death"]

[editable path="hurt_box"]
